syntax = "proto3";

package calculator;

option go_package = "./;calculator";

message SumRequest {
    int32   first_var = 1;
    int32   second_var = 2;
}

message SumResponse {
    int32   result = 1;
}

message PrimeNumberDecompositionRequest {
    int32 input = 1;
}

message PrimeNumberDecompositionResponse {
    int32 result = 1;
}

message AverageRequest {
    int32 input = 1;
}

message AverageResponse {
    float result = 1;
}

message MaximumRequest {
    int32 input = 1;
}

message MaximumResponse {
    int32 result = 1;
}

service CalculatorService {
    rpc Sum(SumRequest) returns (SumResponse) {};
    rpc PrimeNumberDecomposition(PrimeNumberDecompositionRequest) returns (stream PrimeNumberDecompositionResponse) {};
    rpc Average(stream AverageRequest) returns (AverageResponse) {};
    rpc Maximum(stream MaximumRequest) returns (stream MaximumResponse) {};
}